fix photo distortion when squized

--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -1,1 +1,4 @@
 /* src/index.css */
+body {
+  margin: 0;
+}
